[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"
authors = ["s1834 <https://github.com/s1834>"]
readme = "README.md"
repository = "https://github.com/s1834/rust-blockchain.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"